--- a/data/index.htm
+++ b/data/index.htm
@@ -3,7 +3,7 @@
 <head>
   <title>ESP32 Web Server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="data:,">
+  <link href="favicon.png" rel="shortcut icon">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
